overflow bug fixed

--- a/src/app/styles/theme.css
+++ b/src/app/styles/theme.css
@@ -281,10 +281,10 @@ ul.entries > li > div.info > ul.vote > li {
 
 ul.entries > li > div.info > ul.vote > li:last-child {
     margin-left: 12px;
-    max-width: 180px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+        max-width: 180px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
 }
 
 ul.entries > li > div.info > ul.vote > li > a {
@@ -512,6 +512,9 @@ ul.suggest-list > li {
     font-size: 0.8em;
     color: #666;
     border-bottom: 1px solid #eee;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 ul.suggest-list > li:hover {
@@ -558,6 +561,10 @@ ul.list-row > li > div.list-row-info > span.time {
 .list-row-message > span.user {
     color: #404096;
     float: left;
+    max-width: 180px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .list-row-message > span.user:after {
